# gforce

./: .gitignore  cmakedefs  link  makedefs
back/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  Makefile  buzz.c  charger.c  charger.h  comm.c  config.h  main.c  mpc_master.c  mpc_slave.c  scheduler.c  sources.mk  twi_master.c  twi_master.h  twi_slave.c  twi_slave.h
chest/: .gitignore  CMakeLists.txt  Makefile  config.h  main.c  malloc.c  mempool.c  mpctwi.c  queue.c  scheduler.c  scheduler.h  sources.mk  tasks.c
common/: buzz.c  comm.c  diag.c  irrx.c  irrx_xmega.c  led_spi.c  led_usart_spi.c  leds.c  malloc.c  mempool.c  mpc.c  mpcphasor.c  mpctwi.c  phasor_comm.c  queue.c  ringbuf.c  serialcomm.c  settings.c  spi.c  tasks.c  timer.c  tlc59711.c  twi_master.c  twi_slave.c  uart.c  util.c
drivers/: tlc59711.c
extra/: cmds.py  tests.py
fatfs/: diskio.h  ff.c  ffconf.h
freertos/: mem.c  port.c  sources.mk  tasks.c
gs/: Makefile  main.c
include/: buzz.c  chunkpool.c  chunkpool.h  colors.h  comm.c  comm.h  diag.h  eventq.c  g4config.h  gqueue.h  irrx.c  irrx.h  leds.c  leds.h  malloc.c  malloc.h  mempool.c  mempool.h  mpc.c  mpc.h  mpc_common.h  mpc_master.c  mpc_master.h  mpc_slave.c  mpc_slave.h  mpctwi.c  mpctwi.h  phasor_comm.c  phasor_comm.h  pkt.h  ringbuf.c  ringbuf.h  sam.h  scheduler.c  scheduler.h  serialcomm.c  serialcomm.h  settings.h  spi.h  tasks.h  (+12 more)
master/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  Makefile  chunkpool.c  chunkpool.h  comm.h  commands.c  commands.h  config.c  config.h  configure.sh  debug.c  debug.h  display.c  display.h  ds2483.c  ds2483.h  eventq.c  eventq.h  g4_sounds.h  game.c  game.h  ibutton.c  ibutton.h  ir_sensor.c  ir_sensor.h  krn.c  krn.h  lcd.c  lcd.h  lights.c  lights.h  main.c  mpc.c  mpc.h  mpc_master.c  mpcipc.c  mpcipc.h  ports.h  (+26 more)
master/ee/: chest-xmega-rgb.brd  chest-xmega-rgb.sch
master/irdebug/: .gitignore  Makefile  irdebug.c  irdebug.h
master/mp3/: assembly.h  buffers.c  dqchan.c  imdct.c
master/sdhc/: compiler.h  conf_sd_mmc.h  hal_mci_sync.c  hal_mci_sync.h  hpl_mci_sync.h  hpl_sdhc.c  hri_sdhc_d51.h  init.c  init.h  sd_mmc.c  sdmmc_diskio.c  utils_assert.h
oled/: .gitignore  CMakeLists.txt  Makefile  comm.c  comm.h  config.h  display.c  display.h  lcd.c  lcd.h  main.c  mastercomm.c  mastercomm.h  ringbuf.c  sources.mk  timer.c
phasor/: CMakeLists.txt  Makefile  chunkpool.c  config.h  irtx.c  irtx.h  main.c  phasor_comm.c  sources.mk  trigger.c  trigger.h
shoulder/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  config.h  configure.sh  (+14 more)
(+107 files in other folders)
